--- a/src/template/index.html
+++ b/src/template/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' data: 'unsafe-eval' 'unsafe-inline' *.bdimg.com; frame-src 'self'" />
     <meta name="Keywords" content="林岑影, M·M·F 小屋"/>
     <meta name="Description" content="M·M·F 小屋"/>
+    <style> .global-msg { position: fixed; _position: absolute; top: 0; left: 0; width: 100%; text-align: center; color: #7e7e10; font-size: 14px; line-height: 40px; background: rgba(237,237,99,.8); z-index: 20 } </style>
 </head>
 <body>
 <!--[if lte IE 9]>
