--- a/src/template/index.html
+++ b/src/template/index.html
@@ -14,7 +14,7 @@
 <!--[if lte IE 9]>
 <div class="global-msg">作为一个有理想, 有道德, 有文化, 有纪律的四有前端, 是绝对不会为了兼容低版本浏览器而浪费代码的, 请使用 <a target="_blank" href="http://sw.bos.baidu.com/sw-search-sp/software/fc14f1545b7/ChromeStandalone_51.0.2704.106_Setup.exe">Chrome</a> , <a href="http://www.firefox.com.cn/download/" target="_blank">Firefox</a>, <a href="http://chrome.360.cn/" target="_blank">360浏览器</a> 等非IE浏览器访问本站!</div>
 <![endif]-->
-<div id="app"></div>
+<div id="app"><div style="text-align:center; font-size:12px;">如果这行文字没有消失, 说明你的 DNS 被运营商劫持了, 请刷新页面</div></div>
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="/static/editor.md/editormd.min.js"></script>
 </body>
