--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,119 +1,14 @@
-@charset "utf-8";
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-
 body {
-    line-height: 1;
-}
-
-ol, ul {
-    list-style: none;
-}
-
-blockquote, q {
-    quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-.about {
-    margin: 70px auto 40px;
-    padding: 8px;
-    width: 260px;
-    font: 10px/18px 'Lucida Grande', Arial, sans-serif;
-    color: #666;
-    text-align: center;
-    text-shadow: 0 1px rgba(255, 255, 255, 0.25);
-    background: #eee;
-    background: rgba(250, 250, 250, 0.8);
-    border-radius: 4px;
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-    -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 0 1px rgba(255, 255, 255, 0.1), 0 0 6px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 0 1px rgba(255, 255, 255, 0.1), 0 0 6px rgba(0, 0, 0, 0.2);
-}
-.about a {
-    color: #333;
-    text-decoration: none;
-    border-radius: 2px;
-    -webkit-transition: background 0.1s;
-    -moz-transition: background 0.1s;
-    -o-transition: background 0.1s;
-    transition: background 0.1s;
-}
-.about a:hover {
-    text-decoration: none;
-    background: #fafafa;
-    background: rgba(255, 255, 255, 0.7);
-}
-
-.about-links {
-    height: 30px;
-}
-.about-links > a {
-    float: left;
-    width: 50%;
-    line-height: 30px;
-    font-size: 12px;
-}
-
-.about-author {
-    margin-top: 5px;
-}
-.about-author > a {
-    padding: 1px 3px;
-    margin: 0 -1px;
-}
-
-/*
- * Copyright (c) 2012-2013 Thibaut Courouble
- * http://www.cssflow.com
- *
- * Licensed under the MIT License:
- * http://www.opensource.org/licenses/mit-license.php
- */
-body {
-    font: 13px/20px 'Lucida Grande', Tahoma, Verdana, sans-serif;
+    font: 13px/20px Lucida Grande,Tahoma,Verdana,sans-serif;
     color: #404040;
-    background: #DFDBD5;
+    background: #dfdbd5;
 }
 
 .container {
-    margin: 80px auto;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    margin: -122px 0 0 -320px;
     width: 640px;
 }
 
@@ -162,9 +57,6 @@ body {
 .login p:first-child {
     margin-top: 0;
 }
-.login input[type=text], .login input[type=password] {
-    width: 278px;
-}
 .login p.remember_me {
     float: left;
     line-height: 31px;
@@ -209,12 +101,12 @@ body {
     font-size: 13px;
 }
 
-input {
+.login input {
     font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
     font-size: 14px;
 }
 
-input[type=text], input[type=password] {
+.login input[type=text], input[type=password] {
     margin: 5px;
     padding: 0 10px;
     width: 200px;
@@ -229,13 +121,13 @@ input[type=text], input[type=password] {
     -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
 }
-input[type=text]:focus, input[type=password]:focus {
+.login input[type=text]:focus, input[type=password]:focus {
     border-color: #7dc9e2;
     outline-color: #dceefc;
     outline-offset: 0;
 }
 
-input[type=submit] {
+.login input[type=submit] {
     padding: 0 18px;
     height: 29px;
     font-size: 12px;
@@ -257,16 +149,16 @@ input[type=submit] {
     -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
     box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
 }
-input[type=submit]:active {
+.login input[type=submit]:active {
     background: #cde5ef;
     border-color: #9eb9c2 #b3c0c8 #b4ccce;
     -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
-
-.lt-ie9 input[type=text], .lt-ie9 input[type=password] {
-    line-height: 34px;
+.login input[type=text], .login input[type=password] {
+    width: 278px;
 }
+
 .spinner {
     width: 90px;
     height: 90px;
